2004-05-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gpdf has been branched.

2004-04-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnomeprint and libgnomeprintui
	have been branched.

2004-04-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched.

2004-04-21  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-icon-theme and gnome-utils
	have been branched.

2004-04-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk and gnome-keyring have been branched.

2004-04-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed libgtcpsocket.

2004-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the libgda branch to HEAD.

2004-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.

2004-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.8 release
	section.

2004-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.

2004-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gimp has been branched (gimp-2-0).

2004-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been branched.

2004-04-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched.

2004-04-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor has been branched.

2004-04-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2004-04-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnopernicus was silently branched.

2004-04-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed nautilus-mozilla.
	Presumably dead module -- no non-translator activity for
	two years.
