@@ -1743,7 +1743,7 @@
       <component name="libgnome" dir="libgnome" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnome-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-6"/>
         <regenerate/>
         <download/>
       </component>
@@ -1763,7 +1763,7 @@
       <component name="libgnomecanvas" dir="libgnomecanvas" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomecanvas-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-6"/>
         <regenerate/>
         <download/>
       </component>
@@ -1856,7 +1856,7 @@
       <component name="libgnomeui" dir="libgnomeui" group="developer-libs">
         <podir dir="po"/>
         <potname name="libgnomeui-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-6"/>
         <regenerate/>
         <download/>
       </component>
