@@ -1,5 +1,10 @@
 2004-05-02  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: libgnome, libgnomecanvas and
+	libgnomeui have been branched.
+
+2004-05-02  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: gpdf has been branched.
 
 2004-04-22  Christian Rose  <menthos@menthos.com>
